--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.4",
         "barryvdh/laravel-dompdf": "^2.0",
+        "cloudinary-labs/cloudinary-laravel": "1.0.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "spatie/browsershot": "^3.40"
     },
     "require-dev": {
